# openfga-cli-py

./: .pre-commit-hooks.yaml  Makefile  README.md  setup.cfg  setup.py  tox.ini  update_version.sh
.github/workflows/: main.yml
spec/: tool-openfga-cli-py-wrapper.md
tests/: test_package.py
