[metadata]
name = openfga-cli-py
version = 0.7.19.0
description = Python wrapper around invoking the OpenFGA CLI (https://github.com/openfga/cli)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neeve-ai/openfga-cli-py
author = oss-robin
license = Apache License Version 2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.11
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [fga]
    group = fga-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/openfga/cli/releases/download/v0.7.19/fga_0.7.19_linux_amd64.tar.gz
    sha256 = 21da629e0f9d29e97d60a11c860e763915c57c354beda25b6e350168c86f67be
    extract = tar
    extract_path = fga
    [fga]
    group = fga-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/openfga/cli/releases/download/v0.7.19/fga_0.7.19_linux_arm64.tar.gz
    sha256 = 32196f0f45c046057caab854778c84f05cdef87bfa8c3df1cadee56e31fed85c
    extract = tar
    extract_path = fga
    [fga]
    group = fga-binary
    marker = sys_platform == "linux" and platform_machine == "i686"
    url = https://github.com/openfga/cli/releases/download/v0.7.19/fga_0.7.19_linux_386.tar.gz
    sha256 = 7a110e4693523b8e2205b8b7659fc381730ae295ae1421ed92ae05e2e9f04503
    extract = tar
    extract_path = fga
    [fga]
    group = fga-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/openfga/cli/releases/download/v0.7.19/fga_0.7.19_darwin_amd64.tar.gz
    sha256 = 2240aa4f99beb53c252842069b0663515e5f3751f64bbe3f9aedae9b3270e3fc
    extract = tar
    extract_path = fga
    [fga]
    group = fga-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/openfga/cli/releases/download/v0.7.19/fga_0.7.19_darwin_arm64.tar.gz
    sha256 = fa5a24be5a77d7fbaf9e5aff5ea5e8dcab71b72e3351bc442df500ebf29d4130
    extract = tar
    extract_path = fga
    [fga.exe]
    group = fga-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    url = https://github.com/openfga/cli/releases/download/v0.7.19/fga_0.7.19_windows_amd64.tar.gz
    sha256 = c86b4c198ca8360e2076cb46b12dfe77396092f80504d5a32d553bc064c3138c
    extract = tar
    extract_path = fga.exe
    [fga.exe]
    group = fga-binary
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    url = https://github.com/openfga/cli/releases/download/v0.7.19/fga_0.7.19_windows_arm64.tar.gz
    sha256 = 8a005731073657ec319e30099681f33cf327db69e77c2f4622d4e41bc98473f2
    extract = tar
    extract_path = fga.exe
    [fga.exe]
    group = fga-binary
    marker = sys_platform == "win32" and platform_machine == "x86"
    url = https://github.com/openfga/cli/releases/download/v0.7.19/fga_0.7.19_windows_386.tar.gz
    sha256 = 233d463b8aa8d3f1d1602a17c276c35ec33e939e78842d06cbf7058e47a979a0
    extract = tar
    extract_path = fga.exe
